err/pygrametlsilex.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygrametlsilex'...
Compiling './lib/python3.5/site-packages/pygrametlsilex/FIFODict.py'...
***   File "./lib/python3.5/site-packages/pygrametlsilex/FIFODict.py", line 32
    raise TypeError, "size must be an int"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygrametlsilex/JDBCConnectionWrapper.py'...
***   File "./lib/python3.5/site-packages/pygrametlsilex/JDBCConnectionWrapper.py", line 45
    raise TypeError, '1st argument must implement java.sql.Connection'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygrametlsilex/__init__.py'...
***   File "./lib/python3.5/site-packages/pygrametlsilex/__init__.py", line 264
    raise ValueError, "Lists differ in length"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygrametlsilex/datasources.py'...
***   File "./lib/python3.5/site-packages/pygrametlsilex/datasources.py", line 73
    raise ValueError, \
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygrametlsilex/jythonmultiprocessing.py'...
***   File "./lib/python3.5/site-packages/pygrametlsilex/jythonmultiprocessing.py", line 12
    raise ImportError, 'jythonmultiprocessing is made for Jython'
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygrametlsilex/parallel.py'...
***   File "./lib/python3.5/site-packages/pygrametlsilex/parallel.py", line 184
    raise TypeError, \
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygrametlsilex/steps.py'...
***   File "./lib/python3.5/site-packages/pygrametlsilex/steps.py", line 167
    raise KeyError, "%s not found in row" % (element,)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygrametlsilex/tables.py'...
***   File "./lib/python3.5/site-packages/pygrametlsilex/tables.py", line 74
    raise ValueError, "Key argument must be a string"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pygrametlsilex-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
